test/functions/errors/unexpected_argument_type_2.dmd
function add(a: int32, b: int32): int32
    a + b

function add(a: int8, b: int8): int8
    a + b

print(add(2, 5))

--- Output
Type mismatch

The type of the 1st argument of 'add' doesn't match with what I expect.

7│ print(add(2, 5))

The type received is:

int64

But possible types are:

int32 or int8

---